<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:ads="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#001AFF"
        android:gravity="center"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/imgDesc"
        android:src="@drawable/background" />
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:background="#001AFF"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal" >
        <ImageButton
             android:id="@+id/info_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="3dp"
             android:layout_marginLeft="7dp"
             android:background="@null"
             android:src="@drawable/info_button" />
        <TextView
            android:id="@+id/current"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3sp"
            android:gravity="center"
            android:text="@string/current"
            android:textColor="@color/current_text"
            android:textStyle="bold"
            android:textSize="20dp" />
         <ImageButton
            android:id="@+id/two"
            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:src="@drawable/arrow_right" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        android:gravity="center"
        android:layout_gravity="center">
        <Button
                android:id="@+id/stop"
                android:text="@string/stop"
                android:textColor="#E8FEFF"
                android:textSize="31sp"
                android:layout_margin="10dip"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="0"
                android:shadowRadius="5" />
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:fillViewport="true">
        <LinearLayout
            android:id="@+id/lyt_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:layout_gravity="top"
            android:gravity="center">
            <Button
                android:id="@+id/duzhe"
                android:text="@string/duzhe"
                android:textColor="#E8FEFF"
                android:textSize="31sp"
                android:layout_margin="10dip"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:background="@drawable/button_1_background"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="0"
                android:shadowRadius="5" />
            <Button
                android:id="@+id/zahpol"
                android:text="@string/zahpol"
                android:textColor="#E8FEFF"
                android:textSize="31sp"
                android:layout_margin="10dip"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:background="@drawable/button_1_background"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="0"
                android:shadowRadius="5" />
            <Button
                android:id="@+id/uh"
                android:text="@string/uh"
                android:textColor="#E8FEFF"
                android:textSize="31sp"
                android:layout_margin="10dip"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:background="@drawable/button_1_background"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="0"
                android:shadowRadius="5" />
            <Button
                android:id="@+id/molode"
                android:text="@string/molode"
                android:textColor="#E8FEFF"
                android:textSize="31sp"
                android:layout_margin="10dip"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:background="@drawable/button_1_background"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="0"
                android:shadowRadius="5" />
            <Button
                android:id="@+id/yaskrave"
                android:text="@string/yaskrave"
                android:textColor="#E8FEFF"
                android:textSize="31sp"
                android:layout_margin="10dip"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:background="@drawable/button_1_background"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="0"
                android:shadowRadius="5" />
            <Button
                android:id="@+id/nezalezhnist"
                android:text="@string/nezalezhnist"
                android:textColor="#E8FEFF"
                android:textSize="26sp"
                android:layout_margin="10dip"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:background="@drawable/button_1_background"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="0"
                android:shadowRadius="5" />
            <Button
                android:id="@+id/rep"
                android:text="@string/rep"
                android:textColor="#E8FEFF"
                android:textSize="31sp"
                android:layout_margin="10dip"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:background="@drawable/button_1_background"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="0"
                android:shadowRadius="5" />
            <Button
                android:id="@+id/dzvony"
                android:text="@string/dzvony"
                android:textColor="#E8FEFF"
                android:textSize="31sp"
                android:layout_margin="10dip"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:background="@drawable/button_1_background"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="0"
                android:shadowRadius="5" />
            <Button
                android:id="@+id/vezha"
                android:text="@string/vezha"
                android:textColor="#E8FEFF"
                android:textSize="31sp"
                android:layout_margin="10dip"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:background="@drawable/button_1_background"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="0"
                android:shadowRadius="5" />
            <Button
                android:id="@+id/rtrack"
                android:text="@string/rtrack"
                android:textColor="#E8FEFF"
                android:textSize="31sp"
                android:layout_margin="10dip"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:background="@drawable/button_1_background"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="0"
                android:shadowRadius="5" />
            <Button
                android:id="@+id/kazky"
                android:text="@string/kazky"
                android:textColor="#E8FEFF"
                android:textSize="31sp"
                android:layout_margin="10dip"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:background="@drawable/button_1_background"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="0"
                android:shadowRadius="5" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
